--- a/styles/mobilestyles.css
+++ b/styles/mobilestyles.css
@@ -1,47 +1,58 @@
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 950px) {
+
+
+    .emptyMessageElement {
+        font-size: 0.6em;
+        padding-top: 1em;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 100;
+        line-height: 1.6em;
+        opacity: 0.9;
+        color: rgb(36, 35, 35);
+    }
 
     .editButton {
-        width: 50%;
-        height: 50%;
-        margin: auto auto;
+        width: 1.5em;
+        height: 1.5em;
     }
 
     #addNewIdeaButton { 
-    background: url("../img/hinzufugen_color.png");
+    background: url("../img/hinzufugen.png");
     background-size: contain;
     background-repeat: no-repeat;
     filter: invert(0%);
-    opacity: 0.9;
+    opacity: 0.7;
+    filter: invert(100%);
     }
 
     #forgetNewIdeaButton { 
-        background: url("../img/stornieren_red.png");
+        background: url("../img/stornieren.png");
         background-size: contain;
         background-repeat: no-repeat;
-        filter: invert(0%);
-        opacity: 0.9;
+        filter: invert(100%);
+        opacity: 0.7;
         }
 
 .saveEditedIdeaButton {
             opacity: 0.8;
-            background: url("../img/hakchen_green.png");
+            background: url("../img/hakchen.png");
             background-size: contain;
              background-repeat: no-repeat;
-             opacity: 0.9;
+             opacity: 0.7;
         }   
         
         .abortEditingButton {
-            background: url("../img/arrow_color.png");
+            background: url("../img/arrow_bw.png");
             background-size: contain;
             background-repeat: no-repeat;
-            opacity: 0.9;
+            opacity: 0.7;
         }
 
         .cancelEditedIdeaButton {
-            background: url("../img/stornieren_red.png");
+            background: url("../img/stornieren.png");
             background-size: contain;
             background-repeat: no-repeat;
-            opacity: 0.9;
+            opacity: 0.7;
         }
 
     .ideaDivContainer {
@@ -88,20 +99,21 @@
   }
 
   .ideaLabels {
-      margin-left: 1.2em;
-      font-size: 0.6em;
+      margin-left: 0%;
+      font-size: 0.55em;
       font-weight: 400;
       text-align: left;
   }
 
   .showIdeaTextContent {
-      font-size: 0.7em;
+      font-size: 0.6em;
       font-weight: 500;
+      margin-left: 0%;
   }
 
   .showIdeaDiv {
-      width: 100%;
       padding-top: 0.1em;
+      padding-left: 6%;
   }
 
   .editButtonDiv {
@@ -117,12 +129,11 @@
 }
 
 .editIdeaInput {
-    padding-left: 1%;
     font-size: 0.55em;
-    width: 90%;
-    
+    width: 98%;
 }
 
 .editIdeaDiv {
-    padding-top: 0px;
+    padding-top: 0px !important;
+    padding: 0.7em;
 }
