--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 html {
     font-family: sans-serif;
-    background: rgb(251,186,71);
-    background: linear-gradient(90deg, rgba(251,186,71,1) 2%, rgba(255,197,70,1) 32%, rgba(255,202,85,1) 72%, rgba(255,180,57,1) 97%);
+    background: rgb(255,172,56);
+background: linear-gradient(169deg, rgba(255,172,56,1) 20%, rgba(246,153,10,1) 51%, rgba(255,173,38,1) 80%);
     display: flex;
 	justify-content: center;
   align-items: center;
@@ -46,14 +46,15 @@ h2 {
 }
 
 .emptyMessageElement {
-  font-size: 1.2em;
-  font-family: 'Indie Flower', sans-serif;
-  font-weight: 400;
+  line-height: 3em;
+  font-size: 0.8em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
   display: block;
   text-align: center;
   color: rgb(46, 46, 46);
   opacity: 0.8;
-  text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.8);
+  text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
 }
 
 a:any-link {
@@ -369,15 +370,16 @@ button:hover {
     border: 0px;
     outline: none;
     cursor: pointer;
-    width: 55%;
-    height: 55%;
+    width: 2.2em;
+    height: 2.2em;
     margin: auto auto;
-    margin-left: 30%;
+    padding: 0px 0px !important;
     opacity: 0.7;
 }
 
 .editButton:hover {
-    transform: scale(1.1) rotate(8deg);
+    transform: scale(1.1) rotate(70deg);
+    transform-origin: center center;
    transition: all 0.30s;
    opacity: 0.93;
 }
@@ -454,10 +456,8 @@ background: linear-gradient(169deg, rgba(255,196,113,0.7) 38%, rgba(255,178,50,0
 
 .buttonContainer {
   width: 10%;
-  min-width: 10%;
   max-width: 15%;
   display: flex;
-  justify-content: space-between;
   background: rgba(235, 172, 54, 0.503);
   }
 
@@ -482,8 +482,7 @@ background: linear-gradient(169deg, rgba(255,196,113,0.7) 38%, rgba(255,178,50,0
     font-size: 0.68em;
     margin-bottom: 5px;
     line-height: normal;
-    margin-top: 25px;
-    margin-left: 1.5em;
+    margin-top: 2em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
@@ -513,9 +512,10 @@ background: linear-gradient(169deg, rgba(255,196,113,0.7) 38%, rgba(255,178,50,0
   opacity: 1;
   margin-bottom: 1.5em;
   padding-bottom: 2em;
+  padding: 1.5em;
   height: 100%;
   margin-top: 1em;
-  padding-top: 1.2em;
+  padding-top: 0px;
   background:rgba(250, 250, 250, 0.98);
   border: 3px solid rgba(247, 247, 247, 0.8);
   box-shadow: 1px 1px 10px 1px rgb(167, 167, 167, 0.6);
@@ -543,13 +543,14 @@ background: linear-gradient(169deg, rgba(255,196,113,0.7) 38%, rgba(255,178,50,0
 
 
 .showIdeaTextContent {
-  margin-left: 3em;
   font-family: 'Montserrat', sans-serif;
+  font-size: 0.85em;
   font-weight: 450;
   margin-bottom: 3em;
   color: rgb(46, 46, 46);
   opacity: 0.9;
   text-shadow: 1px 1px 25px rgb(167, 167, 167, 0.2);
+  word-wrap: break-word;
 }
 
 .showIdeaTextContent:hover {
@@ -563,7 +564,7 @@ background: linear-gradient(169deg, rgba(255,196,113,0.7) 38%, rgba(255,178,50,0
     margin-bottom: 1.5em;
     height: 100%;
     margin-top: 1em;
-    padding-top: 1em;
+    padding: 0.5em 1.5em;
     text-align: center;
     background:rgba(250, 250, 250, 0.98);
     border: 3px solid rgba(247, 247, 247, 0.8);
@@ -671,19 +672,20 @@ background: linear-gradient(169deg, rgba(255,196,113,0.7) 38%, rgba(255,178,50,0
 
 .editIdeaInput {
     margin-top: 0.5em;
-    width: 85%;
+    width: 99%;
     height: 40px;
     font-size: 0.65em;
     opacity: 0.9;
     color: rgb(46, 46, 46);
     border: 1px white;
-    padding-left: 1%;
     resize: none;
     margin-bottom: 1.2em;
     box-shadow: 1px 1px 15px 0.2px rgb(167, 167, 167, 0.4);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     outline: none;
+    padding-left: 1.6%;
+    padding-right: 0px !important;
 }
 
 
