--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,7 @@ h2 {
   font-weight: 100;
   display: block;
   text-align: center;
-  color: rgb(46, 46, 46);
+  color: rgb(78, 78, 78);
   opacity: 0.8;
   text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
 }
@@ -534,6 +534,7 @@ display: flex;
     color: rgb(46, 46, 46);
     z-index: 1;
     width: 100%;
+    position: relative;
 }
 
 .unchecked:hover {
@@ -562,6 +563,18 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
+}
+
+.lastUpdatedIdeaItemLabel {
+  color: rgb(88, 88, 88);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  font-size: 0.6em;
+  opacity: 0.8;
+  position:absolute;
+  height: 100%;
+  right: 3%;
+  margin-top: 2.5%;
 }
 
 .idea-item-editing-mode {
@@ -599,6 +612,7 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
   background:rgba(250, 250, 250, 0.98);
   border: 3px solid rgba(247, 247, 247, 0.8);
   box-shadow: 1px 1px 10px 1px rgb(167, 167, 167, 0.6);
+  position: relative;
 }
 
 .showIdeaDiv:hover {
