Function deadline-countdown added, style updates, bugfixes

--- a/styles/mobilestyles.css
+++ b/styles/mobilestyles.css
@@ -159,6 +159,10 @@
       padding-top: 10px;
   }
 
+  .addedInputField {
+    font-size: 0.55em;
+  }
+
 #addNewIdeaButton {
     height: 40px;
 }
