--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,12 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     letter-spacing: -0.09em;
+    transition: all 0.5s;
+}
+
+h1:hover {
+  transform: scale(1.02);
+  transition: all 0.5s;
 }
 
 h2 {
@@ -52,7 +58,7 @@ h2 {
   font-weight: 100;
   display: block;
   text-align: center;
-  color: rgb(78, 78, 78);
+  color: rgb(46, 46, 46);
   opacity: 0.8;
   text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
 }
@@ -76,24 +82,25 @@ a:-webkit-any-link {
     width: 18em;
     font-size: 1.2em;
     opacity: 0.9;
-    background-color: rgb(247, 249, 255);
+    background-color: rgb(255, 255, 255);
     color: rgb(46, 46, 46);
     border: 1px white;
     margin-top: 5px;
     padding-left: 0.5%;
-    box-shadow: 1px 1px 15px 0.2px rgba(97, 97, 97, 0.6);
+    box-shadow: 1px 1px 10px 0.2px rgba(97, 97, 97, 0.4);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     -webkit-font-smoothing: subpixel-antialiased;
     backface-visibility: unset;
     outline: none;
+    transition: all 0.25s;
 }
 
 .input:hover {
-    transform: scale(1.01) ;
-    transition: all 0.15s;
+    transform: scale(1.03) ;
+    transition: all 0.4s;
     transform: scale(1.003);
-    box-shadow: 2px 2px 15px 0.8px rgba(97, 97, 97, 0.9);
+    box-shadow: 2px 2px 15px 0.5px rgba(97, 97, 97, 0.5);
   }
 
 /*ANIMATIONS*/
@@ -341,7 +348,7 @@ a:-webkit-any-link {
     background: url("../img/zahnrad.png");
     background-size: contain;
     background-repeat: no-repeat;
-    border: 0px;
+    border: none;
     outline: none;
     cursor: pointer;
     width: 2.2em;
@@ -349,6 +356,7 @@ a:-webkit-any-link {
     margin: auto auto;
     padding: 0px 0px !important;
     opacity: 0.7;
+    transition: all 0.35s;
 }
 
 .editButton:hover {
@@ -359,7 +367,7 @@ a:-webkit-any-link {
 }
 
 .editButton-editing-mode {
-    transform: scale(1.18) rotate(70deg);
+    transform: scale(1.12) rotate(70deg);
     transition: all 0.35s;
     opacity: 1;
 }
@@ -457,6 +465,12 @@ a:-webkit-any-link {
     -webkit-animation: formContainerDown 0.2s forwards linear;
 }
 
+.form-container\:hide {
+  height: auto;
+  opacity: 1;
+  -webkit-animation: formContainerUp 0.15s forwards linear;
+}
+
 
 .idea-list-container {
     background: rgb(247, 244, 243);
@@ -480,38 +494,38 @@ a:-webkit-any-link {
 
 .ideaDivContainer {
   width: auto;
-  line-height: 2em;
+  line-height: 2.1em;
   display: flex;
   margin-top: 15px;
-  box-shadow: 0px 0px 2px 1px rgb(197, 197, 197);
-  border: 1px rgb(124, 124, 124, 0.3);
-  border-style: solid;
-  transition: all 0.15s;
+  box-shadow: 1px 1px 3px 1px rgb(197, 197, 197, 0.6);
+  transition: all 0.25s;
+  position: relative;
 }
 
 .ideaDivContainer:hover {
-transform: scale(1.015) ;
-box-shadow: 1px 1px 4px 1px rgb(167, 167, 167, 0.7);
-transition: all 0.15s;
+transform: scale(1.005);
+box-shadow: 1px 1px 4px 1px rgb(167, 167, 167, 0.6);
+transition: all 0.25s;
 display: flex;
 }
 
 .checkedIcon {
-  height: 1.9em;
-  width: 1.9em;
+  height: 1.5em;
+  width: 1.5em;
   background-color: rgb(243, 241, 240, 0.3);
   border: none;
   color: rgb(46, 46, 46);
-  margin-right: 0.9em;
-  margin-left: auto;
+  margin-right: 0.5em;
+  margin-left: 1em;
   margin-bottom: auto;
   margin-top: auto;
   font-size: 0.5em;
-  opacity: 0.5;
+  opacity: 0.65;
   outline: none;
-  background: url("../img/hakchen_green.png");
+  background: url("../img/checked.png");
   background-size: contain;
   background-repeat: no-repeat;
+  transition: all 0.25s;
 }
 
 
@@ -528,28 +542,32 @@ display: flex;
     padding-left: 1.5%;
     list-style: none;
     transition: all 0.45s;
-    display: flex;
     font-family: 'Staatliches', sans-serif;
-    font-size: 1.2em;
+    font-size: 1.15em;
     color: rgb(46, 46, 46);
-    z-index: 1;
+    opacity: 0.9;
     width: 100%;
     position: relative;
+    height: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    letter-spacing: -0.4px;
 }
 
 .unchecked:hover {
   background: rgb(255,196,113);
-  background: linear-gradient(169deg, rgba(255,196,113,0.6) 38%, rgba(255,178,50,0.6) 97%);
+  background: linear-gradient(169deg, rgba(255,196,113,0.3) 38%, rgba(255,178,50,0.3) 97%);
 }
 
 .checked {
   background: rgb(169,246,10);
-background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0) 100%);
+background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0) 80%);
 }
 
 .checked:hover {
   background: rgb(8, 255, 50);
-    background: linear-gradient(86deg, rgba(146, 255, 113, 0.5) 50%, rgba(255,178,50,0.6) 100%);
+    background: linear-gradient(86deg, rgba(146, 255, 113, 0.4) 30%, rgba(255,178,50,0.3) 100%);
   }  
 
 .ideaLabels {
@@ -569,28 +587,29 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
   color: rgb(88, 88, 88);
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
-  font-size: 0.6em;
+  font-size: 0.55em;
   opacity: 0.8;
   position:absolute;
   height: 100%;
-  right: 3%;
-  margin-top: 2.5%;
+  right: 2.5%;
+  top: 2%;
 }
 
 .idea-item-editing-mode {
   background: rgb(255,196,113);
-  background: linear-gradient(169deg, rgba(255,196,113,0.6) 38%, rgba(255,178,50,0.6) 97%);
-  transform: scale(1.015) ;
-   box-shadow: 1px 1px 4px 1px rgb(167, 167, 167, 0.7);
-   transition: all 0.15s;
+  background: linear-gradient(169deg, rgba(255,196,113,0.4) 38%, rgba(255,178,50,0.4) 97%);
+  transform: scale(1.005);
+   box-shadow: 1px 1px 4px 2px rgb(167, 167, 167, 0.5);
+   transition: all 0.25s;
 }
 
 .idea-item-editing-mode-checked {
   background: rgb(8, 255, 50);
-  background: linear-gradient(90deg, rgba(146, 255, 113, 0.5) 50%, rgba(255,178,50,0.6) 100%);
-  transform: scale(1.015) ;
-   box-shadow: 1px 1px 4px 1px rgb(167, 167, 167, 0.7);
-   transition: all 0.15s;
+  background: linear-gradient(90deg, rgba(146, 255, 113, 0.4) 30%, rgba(255,178,50,0.4) 100%);
+  transform: scale(1.005);
+   box-shadow: 1px 1px 4px 2px rgb(167, 167, 167, 0.5);
+   transition: all 0.25s;
+   pointer-events: all !important;
 }
 
 
@@ -608,17 +627,17 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
   padding: 1.5em;
   height: 100%;
   margin-top: 1em;
-  padding-top: 0px;
+  padding-top: 1em;
   background:rgba(250, 250, 250, 0.98);
   border: 3px solid rgba(247, 247, 247, 0.8);
-  box-shadow: 1px 1px 10px 1px rgb(167, 167, 167, 0.6);
+  box-shadow: 1px 1px 15px 0.7px rgb(167, 167, 167, 0.5);
   position: relative;
 }
 
 .showIdeaDiv:hover {
   transition: all 0.35s;
   transform: scale(1.008);
-  box-shadow: 15px 25px 22px 1px rgb(167, 167, 167, 0.7);
+  box-shadow: 2px 2px 20px 1px rgb(167, 167, 167, 0.7);
 }
 
 .showIdeaDiv\:active {
@@ -652,8 +671,64 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
   list-style-type: circle;
 }
 
-.showIdeaTextContent:hover {
+.deadlineInputLabel {
+  width: 11%;
+  outline: none;
+  height: 35px;
+  font-size: 0.6em;
+  opacity: 0.9;
+  background-color: rgb(255, 255, 255, 0.8);
+  color: rgb(46, 46, 46);
+  border: 1px white;
+  text-align: center;
+  margin-top: 1.8%;
+  box-shadow: 1px 1px 10px 0.2px rgba(97, 97, 97, 0.4);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  transition: all 0.25s;
+}
 
+.deadlineLabel {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.75em;
+  font-weight: 450;
+  margin-bottom: 3em;
+  color: rgb(46, 46, 46);
+  opacity: 0.8;
+  text-shadow: 1px 1px 25px rgb(167, 167, 167, 0.2);
+  line-height: 2em;
+}
+
+.timeRemainingLabel {
+  position: absolute;
+  font-size: 0.43em;
+  font-weight: 200;
+  font-family: 'Montserrat', sans-serif;
+  color: rgb(43, 43, 43);
+  right: 1%;
+  bottom: -36%;
+  opacity: 0.9;
+  pointer-events: none;
+}
+
+.deadlineDiv {
+  height: auto;
+}
+
+.deadlineSelector {
+  height: 38px;
+  outline: none;
+  font-size: 0.6em;
+  opacity: 0.9;
+  background-color: rgb(255, 255, 255, 0.8);
+  color: rgb(46, 46, 46);
+  border: 1px white;
+  margin-left: 15px;
+  padding-left: 0.5%;
+  box-shadow: 1px 1px 10px 0.2px rgba(97, 97, 97, 0.4);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  transition: all 0.25s;
 }
 
 .editIdeaDiv {
@@ -663,17 +738,19 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
     margin-bottom: 1.5em;
     height: 100%;
     margin-top: 1em;
-    padding: 0.5em 1.5em;
+    padding: 0em 1.5em;
+    padding-top: 1em;
     text-align: center;
     background:rgba(250, 250, 250, 0.98);
     border: 3px solid rgba(247, 247, 247, 0.8);
-    box-shadow: 1px 1px 10px 1px rgb(167, 167, 167, 0.6);
+    box-shadow: 1px 1px 15px 0.7px rgb(167, 167, 167, 0.5);
+    position: relative;
 }
 
 .editIdeaDiv:hover {
     transition: all 0.35s;
     transform: scale(1.008);
-    box-shadow: 3px 10px 10px 0.5px rgb(167, 167, 167, 0.6);
+    box-shadow: 2px 2px 20px 1px rgb(167, 167, 167, 0.7);
 }
 
 .editIdeaDiv\:active {
@@ -790,7 +867,6 @@ background: linear-gradient(86deg, rgba(169,246,10,0.25) 50%, rgba(255,173,38,0)
 .abortEditingButton {
     height: 50px;
     width: 4em;
-    background-color: rgb(243, 241, 240, 0.3);
     border: none;
     color: rgb(46, 46, 46);
     margin: 0px 15px;
@@ -818,7 +894,6 @@ opacity: 1;
   
   height: 50px;
   width: 4em;
-  background-color: rgb(243, 241, 240, 0.3);
   border: none;
   color: rgb(46, 46, 46);
   margin: 0px 15px;
@@ -845,7 +920,6 @@ opacity: 1;
 .saveEditedIdeaButton {
     height: 50px;
     width: 4em;
-    background-color: rgb(243, 241, 240, 0.3);
     border: none;
     color: rgb(46, 46, 46);
     margin: 0px 15px;
