--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ body {
 footer {
   font-size: 1em;
   color: white;
-  opacity: 0.4;
+  opacity: 0.6;
   text-align: center;
   font-family: 'Indie Flower', sans-serif;
   font-weight: 100;
@@ -90,16 +90,13 @@ a:-webkit-any-link {
     box-shadow: 1px 1px 10px 0.2px rgba(97, 97, 97, 0.4);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    -webkit-font-smoothing: subpixel-antialiased;
-    backface-visibility: unset;
     outline: none;
     transition: all 0.25s;
 }
 
 .input:hover {
-    transform: scale(1.03) ;
     transition: all 0.4s;
-    transform: scale(1.003);
+
     box-shadow: 2px 2px 15px 0.5px rgba(97, 97, 97, 0.5);
   }
 
@@ -288,8 +285,8 @@ a:-webkit-any-link {
 }
 
 #addNewIdeaButton {
+  filter: invert(100%);
     cursor: pointer;
-    filter: invert();
     margin-top: 5em;
     height: 70px;
     width: 4em;
@@ -304,20 +301,14 @@ a:-webkit-any-link {
 
 #addNewIdeaButton:hover {
     filter: none;
-    background: url("../img/hinzufugen_color.png");
-    background-size: contain;
-    background-repeat: no-repeat;
     opacity: 1;
-    transform: scale(1.14) ;
-    -webkit-transition:background 0.2s ease;
-    -moz-transition:background 0.2s ease;
-    -o-transition:background 0.2s ease;
+    transform: scale(1.08) ;
     transition: all 0.15s;
 }
 
 #forgetNewIdeaButton {
+  filter: invert(100%);
     cursor: pointer;
-    filter: invert();
     margin-top: 5em;
     height: 70px;
     width: 4em;
@@ -332,14 +323,8 @@ a:-webkit-any-link {
 
 #forgetNewIdeaButton:hover {
     filter: none;
-    background: url("../img/stornieren_red.png");
-    background-size: contain;
-    background-repeat: no-repeat;
     opacity: 1;
-    transform: scale(1.14) ;
-    -webkit-transition:background 0.2s ease;
-    -moz-transition:background 0.2s ease;
-    -o-transition:background 0.2s ease;
+    transform: scale(1.08) ;
     transition: all 0.15s;
 }
 
@@ -360,16 +345,20 @@ a:-webkit-any-link {
 }
 
 .editButton:hover {
-    transform: scale(1.1) rotate(70deg);
+    transform: scale(1.12) rotate(70deg);
     transform-origin: center center;
    transition: all 0.30s;
    opacity: 0.93;
+backface-visibility: hidden;
+display: initial;
+-webkit-perspective: 1000;
 }
 
 .editButton-editing-mode {
     transform: scale(1.12) rotate(70deg);
+    opacity: 0.9;
     transition: all 0.35s;
-    opacity: 1;
+-webkit-perspective: 1000;
 }
 
 .addNewInputButton {
@@ -434,8 +423,7 @@ a:-webkit-any-link {
 }
 
 .newInputDiv {
-  height: auto;
-  display:flex;
+    display:flex;
   flex-direction:row;
   width: 100%;
 }
@@ -483,11 +471,13 @@ a:-webkit-any-link {
     opacity: 1;
     margin-top: 4%;
     padding-bottom: 2%;
+    
 }
 
 #idea-list {
     color: rgb(41, 41, 41);
     padding: 3% 5%;
+    padding-top: 0px;
     height: 100%;
     font-size: 1.8em;
 }
@@ -526,6 +516,7 @@ display: flex;
   background-size: contain;
   background-repeat: no-repeat;
   transition: all 0.25s;
+  pointer-events: none;
 }
 
 
@@ -587,12 +578,11 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
   color: rgb(88, 88, 88);
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
-  font-size: 0.55em;
+  font-size: 0.57em;
   opacity: 0.8;
   position:absolute;
-  height: 100%;
   right: 2.5%;
-  top: 2%;
+  bottom: 1%;
 }
 
 .idea-item-editing-mode {
@@ -627,11 +617,12 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
   padding: 1.5em;
   height: 100%;
   margin-top: 1em;
-  padding-top: 1em;
+  padding-top: 0.5em;
   background:rgba(250, 250, 250, 0.98);
   border: 3px solid rgba(247, 247, 247, 0.8);
   box-shadow: 1px 1px 15px 0.7px rgb(167, 167, 167, 0.5);
   position: relative;
+  -webkit-perspective: 1000;
 }
 
 .showIdeaDiv:hover {
@@ -701,13 +692,13 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
 
 .timeRemainingLabel {
   position: absolute;
-  font-size: 0.43em;
+  font-size: 0.44em;
   font-weight: 200;
   font-family: 'Montserrat', sans-serif;
   color: rgb(43, 43, 43);
   right: 1%;
-  bottom: -36%;
-  opacity: 0.9;
+  bottom: -35%;
+  opacity: 0.8;
   pointer-events: none;
 }
 
@@ -724,11 +715,105 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
   color: rgb(46, 46, 46);
   border: 1px white;
   margin-left: 15px;
+  margin-bottom: 20px;
   padding-left: 0.5%;
   box-shadow: 1px 1px 10px 0.2px rgba(97, 97, 97, 0.4);
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   transition: all 0.25s;
+}
+
+.sortIdeasSelector {
+  outline: none;
+  font-size: 0.9em;
+  opacity: 0.9;
+  background-color: rgb(255, 255, 255, 0.8);
+  color: rgb(46, 46, 46);
+  border: 1px white;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  padding-left: 0.5%;
+  box-shadow: 1px 1px 10px 0.2px rgba(97, 97, 97, 0.4);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  transition: all 0.25s;
+  margin-right: 5%;
+}
+
+.sortIdeasSelectorLabel {
+  color: rgb(46, 46, 46);
+  opacity: 0.8;
+  font-size: 0.9em;
+  line-height: normal;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
+}
+
+.sortIdeasSelectorDiv {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: auto;
+  padding-top: 3%;
+}
+
+.priorityIndicator {
+  height: 1.5em;
+  width: 1.5em;
+  border: none;
+  color: rgb(46, 46, 46);
+  font-size: 0.5em;
+  opacity: 0.55;
+  outline: none;
+  background: url("../img/priotiry0.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: all 0.25s;
+  position: absolute;
+  right: 1%;
+  top: 0.1em;
+}
+
+
+.priorityChangeButton {
+  cursor: pointer;
+  height: 4em;
+  width: 4em;
+  border: none;
+  margin: 0px 10px;
+  opacity: 0.8;
+  outline: none;
+  position: absolute;
+  right: 4%;
+  background: url("../img/priotiry0.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.priority1 {
+  background: url("../img/priotiry1.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+
+.priority2 {
+  background: url("../img/priotiry2.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.prioritySelectorLabel {
+  position: absolute;
+  right: 6%;
+  color: rgb(46, 46, 46);
+  opacity: 0.8;
+  font-size: 0.4em;
+  line-height: normal;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  text-shadow: 1px 1px 12px rgb(167, 167, 167, 0.2);
 }
 
 .editIdeaDiv {
@@ -739,7 +824,7 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
     height: 100%;
     margin-top: 1em;
     padding: 0em 1.5em;
-    padding-top: 1em;
+    padding-top: 0.5em;
     text-align: center;
     background:rgba(250, 250, 250, 0.98);
     border: 3px solid rgba(247, 247, 247, 0.8);
@@ -871,7 +956,7 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
     color: rgb(46, 46, 46);
     margin: 0px 15px;
     font-size: 0.5em;
-    opacity: 0.6;
+    opacity: 0.8;
     outline: none;
     background: url("../img/arrow_bw.png");
     background-size: contain;
@@ -879,13 +964,7 @@ background: linear-gradient(86deg, rgba(169,246,10,0.35) 30%, rgba(255,173,38,0)
 }
 
 .abortEditingButton:hover {
-  background: url("../img/arrow_color.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-transform: scale(1.14) ;
--webkit-transition:background 0.2s ease;
--moz-transition:background 0.2s ease;
--o-transition:background 0.2s ease;
+transform: scale(1.08) ;
 transition: all 0.15s;
 opacity: 1;
 }
@@ -898,7 +977,7 @@ opacity: 1;
   color: rgb(46, 46, 46);
   margin: 0px 15px;
   font-size: 0.5em;
-  opacity: 0.6;
+  opacity: 0.8;
   outline: none;
   background: url("../img/stornieren.png");
   background-size: contain;
@@ -906,13 +985,7 @@ opacity: 1;
 }
 
 .cancelEditedIdeaButton:hover {
-  background: url("../img/stornieren_red.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-transform: scale(1.14) ;
--webkit-transition:background 0.2s ease;
--moz-transition:background 0.2s ease;
--o-transition:background 0.2s ease;
+transform: scale(1.08) ;
 transition: all 0.15s;
 opacity: 1;
 }
@@ -924,7 +997,7 @@ opacity: 1;
     color: rgb(46, 46, 46);
     margin: 0px 15px;
     font-size: 0.5em;
-    opacity: 0.6;
+    opacity: 0.8;
     outline: none;
     background: url("../img/hakchen.png");
     background-size: contain;
@@ -932,17 +1005,8 @@ opacity: 1;
 }
 
 .saveEditedIdeaButton:hover {
-    cursor: pointer;
-    border: none;
-    color: rgb(46, 46, 46);
-    margin: 0px 15px;
-    font-size: 0.5em;
-    opacity: 0.6;
-    outline: none;
-    background: url("../img/hakchen_green.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-transform: scale(1.14) ;
+    opacity: 1;
+transform: scale(1.08) ;
 transition: all 0.15s;
 opacity: 1;
 }
@@ -955,7 +1019,7 @@ opacity: 1;
   color: rgb(46, 46, 46);
   margin: auto auto;
   font-size: 0.5em;
-  opacity: 0.6;
+  opacity: 0.8;
   outline: none;
   background: url("../img/ziel.png");
   background-size: contain;
@@ -963,13 +1027,7 @@ opacity: 1;
 }
 
 .markCheckedButton:hover {
-    background: url("../img/ziel_color.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-transform: scale(1.14) ;
--webkit-transition:background 0.2s ease;
--moz-transition:background 0.2s ease;
--o-transition:background 0.2s ease;
+transform: scale(1.08) ;
 transition: all 0.15s;
 opacity: 1;
 }
@@ -982,7 +1040,7 @@ opacity: 1;
   color: rgb(46, 46, 46);
   margin: auto auto;
   font-size: 0.5em;
-  opacity: 0.6;
+  opacity: 0.8;
   outline: none;
   background: url("../img/arrow_bw.png");
   background-size: contain;
@@ -990,20 +1048,14 @@ opacity: 1;
 }
 
 .markUncheckedButton:hover {
-    background: url("../img/arrow_color.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-transform: scale(1.14) ;
--webkit-transition:background 0.2s ease;
--moz-transition:background 0.2s ease;
--o-transition:background 0.2s ease;
+transform: scale(1.08) ;
 transition: all 0.15s;
 opacity: 1;
 }
 
 .editButtonDiv {
-    padding-top: 1.2em;
-    padding-bottom: 0.8em;
+    padding-top: 0.8em;
+    padding-bottom: 1.5em;
 }
 
 .showIdeaButtonDiv {
